# screening-spec-workflow

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  openapi.yaml  pyproject.toml  ruff.toml
.spec-workflow/specs/screening-api-core/: design.md  requirements.md  tasks.md
.spec-workflow/specs/screening-api-core/Implementation Logs/: task-10_2026-02-12T0945_da3c5ac0.md  task-11_2026-02-12T0947_242bbcd4.md  task-12_2026-02-12T0949_9b8ac80c.md  task-13_2026-02-12T0951_374c06f1.md  task-14_2026-02-12T0953_e0a76c03.md  task-15_2026-02-13T0115_7970543f.md  task-16_2026-02-13T0117_12edec91.md  task-16_2026-02-13T0144_d7105b7c.md  task-17_2026-02-13T0119_42307e07.md  task-17_2026-02-13T0146_91bd9322.md  task-18_2026-02-13T0122_a9cfac1c.md  task-19_2026-02-13T0127_076e25a2.md  task-1_2026-02-12T0918_74ad2cec.md  task-20_2026-02-13T0133_8152bba0.md  task-2_2026-02-12T0919_36e356a2.md  task-3_2026-02-12T0920_691d6164.md  (+6 more)
.spec-workflow/steering/: product.md  structure.md  tech.md
app/: README.md
app/domain/: screening_service.py
app/infrastructure/: screening_service_impl.py
app/presentation/: __init__.py  main.py
app/presentation/api/: __init__.py  dependencies.py
app/usecase/: screening_usecase.py
scripts/: export_openapi.py
tests/: README.md
tests/e2e/: test_api_e2e.py
tests/integration/: test_health_integration.py  test_screening_integration.py
tests/unit/domain/: test_screening_service.py
tests/unit/infrastructure/: test_screening_service_impl.py
tests/unit/presentation/: test_schemas.py
tests/unit/usecase/: test_screening_usecase.py
(+17 files in other folders)
